# coupler-public

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  logger.h  native-lib.c
app/src/main/res/anim/: popup_context_in.xml  popup_in.xml  popup_out.xml  push_right_in.xml  push_right_out.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: ic_bookmark_blue_24dp.xml  ic_bookmark_border_blue_24dp.xml  ic_bookmarks_24dp.xml  ic_cancel_blue_24dp.xml  ic_cancel_grey_24dp.xml  ic_chat_24dp.xml  ic_chat_blue_24dp.xml  ic_contact_add_blue_24dp.xml  ic_done_all_24dp.xml  ic_download_blue_24dp.xml  ic_location_on_blue_24dp.xml  ic_location_searching_blue_24dp.xml  ic_place_yellow_24dp.xml  ic_route_24dp.xml  ic_route_white_24dp.xml  ic_search_white_24dp.xml  selector_place_bookmark.xml
app/src/main/res/layout/: activity_add_group_membership.xml  activity_chat.xml  activity_contact.xml  activity_contact_info.xml  activity_contact_list.xml  activity_edit_contact.xml  activity_edit_group.xml  activity_group_info.xml  activity_message.xml  activity_mock.xml  activity_new_contact.xml  activity_new_group.xml  activity_new_message.xml  activity_offline.xml  activity_offline_region.xml  activity_placelist.xml  activity_places.xml  activity_places_lists.xml  activity_search_region.xml  app_bar_main.xml  chat_list_item.xml  contact_details_on_map.xml  contact_list.xml  contact_list_item.xml  content_contact.xml  content_main.xml  (+26 more)
(+313 files in other folders)
